# HPC

Project_Heat_Transfer/Project_1D_MPI/: CMakeLists.txt  HPC.sh  job.bsub
Project_Heat_Transfer/Project_1D_MPI/include/: Analytical.hpp  ErrorEstimator.hpp  Explicit.hpp  HDF5_Reader.hpp  HDF5_Writer.hpp  Implicit.hpp  is_equal.hpp  write_txt.hpp
Project_Heat_Transfer/Project_1D_MPI/postprocess/: plot_dudx_WRT_XandT.gp  plot_error_dt.gp  plot_error_dx.gp  plot_u_WRT_x_at_T.gp
Project_Heat_Transfer/Project_1D_MPI/src/: Analytical.cpp  ErrorEstimator.cpp  Explicit.cpp  HDF5_Reader.cpp  HDF5_Writer.cpp  Implicit.cpp  driver.cpp  is_equal.cpp  write_txt.cpp
mae5032/: back_up.sh
